--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/styles.css"> 
     <title>Euri's personal site</title>
 </head>
 <body>
-    <img src="photo.jpg" alt="profile picture">
+    <img class="profile" src="photo.jpg" alt="profile picture">
     <h1>Euri Elliot Oh</h1>
     <p> <em> a <strong>front-end </strong> developer wannabe </em></p>
     <p> I am a web developer in training. I love bird watching and taking a nap.</p>
