--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li> Free Geek Vancouver </li>
         <li> Korean web developer wannabe bootcamp</li>
     </ul>
-
+    <div>
     <h3> My hobbies</h3>
         <ol>
             <li> Bird watching </li>
@@ -26,7 +26,8 @@
             <li> Home decoration D.I.Y.</li>
             <li> Paintings and drawings</li>
         </ol>
-
+    </div>
+    
     <h1>Let's keep in touch</h1>
         <button>Contact me </button>
 </body>
